--- a/newGuo/order.html
+++ b/newGuo/order.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>地址管理</title>
+    <title>我的订单</title>
     <meta name="viewport" charset="utf-8" content="width=1024">
-    <meta name="keywords" content="地址管理">
-    <meta name="description" content="地址管理">
+    <meta name="keywords" content="我的订单">
+    <meta name="description" content="我的订单">
     <link href="global/styles/base.css" type="text/css" rel="stylesheet">
     <link href="global/styles/layout.css" type="text/css" rel="stylesheet">
     <link href="cart/styles/cart.css" type="text/css" rel="stylesheet">
@@ -115,165 +115,97 @@
 
 <!--content-->
 <div class="container">
-    <div class="my-cart">
-        <h1>收货地址</h1>
+    <div class="my-cart" style="margin-bottom: 50px;">
+        <h1>我的订单</h1>
         <div style="border-bottom: 1px solid #ccc;"></div>
-        <div class="address-list">
-           <div>
-               <!--地址列表-->
-               <div class="selected">
-                    <div class="address-user-name">
-                        毛义明
-                        <div class="edit-icon">
-                            <a href="#">
-                                <i class="icon-edit"></i>
-                            </a>
-                            <a href="#">
-                                <i class="icon-remove" style="margin-top: -4px; *+margin-top:-2px; vertical-align: middle; "></i>
-                            </a>
-                        </div>
-                    </div>
-                    <div style="margin-top: 10px">
-                        18503014026
-                    </div>
-                   <div >
-                       广东省广州市天河区
-                   </div>
-                   <div >
-                       华明路 13号，华普广场东塔702 （510000）
-                   </div>
-               </div>
-               <div >
-                   <div class="address-user-name">
-                       毛义明
-                   </div>
-                   <div style="margin-top: 10px">
-                       18503014026
-                   </div>
-                   <div >
-                       广东省广州市天河区
-                   </div>
-                   <div >
-                       华明路 13号，华普广场东塔702 （510000）
-                   </div>
-               </div>
-               <div >
-                   <div class="address-user-name">
-                       毛义明
-                   </div>
-                   <div style="margin-top: 10px">
-                       18503014026
-                   </div>
-                   <div >
-                       广东省广州市天河区
-                   </div>
-                   <div >
-                       华明路 13号，华普广场东塔702 （510000）
-                   </div>
-               </div>
-               <div >
-                   <div class="address-user-name">
-                       毛义明
-                   </div>
-                   <div style="margin-top: 10px">
-                       18503014026
-                   </div>
-                   <div >
-                       广东省广州市天河区
-                   </div>
-                   <div >
-                       华明路 13号，华普广场东塔702 （510000）
-                   </div>
-               </div>
-               <div >
-                   <div class="address-user-name">
-                       毛义明
-                   </div>
-                   <div style="margin-top: 10px">
-                       18503014026
-                   </div>
-                   <div >
-                       广东省广州市天河区
-                   </div>
-                   <div >
-                       华明路 13号，华普广场东塔702 （510000）
-                   </div>
-               </div>
 
-               <!--添加地址-->
-               <div style="text-align: center; cursor: pointer; ">
-                   <a class="address-add" href="address-form.html">
-                       <i class="icon-plus" style="color: #ccc; font-size: 20px; margin-top: 50px; display: block"></i>
-                       <br>
-                       <span style="color: #ccc;margin-top: -17px;display: block;"> 使用新地址</span>
-                   </a>
-               </div>
-           </div>
-           <div style="clear: both"></div>
+        <!--订单为空时显示-->
+       <!-- <div style="margin: 20px; font-weight: bold;">
+            还没有订单哦！
+        </div>-->
+
+        <div class="pay-detail-two">
+            <div class="order-number">
+                订单：2014978239479
+            </div>
+            <div class="order-money">
+                <p>
+                    时间：2014.05.22  &nbsp; <span>15:24</span>
+                </p>
+                <p>
+                    金额：234234元
+                </p>
+                <p>
+                    货品：国馆中国道 *1
+                </p>
+                <p>
+                    配送：毛义明  /  18668199311  /  广东省，广州市，天河区，华明路 13号，华普广场东塔702 （510000）
+                </p>
+            </div>
+            <div class="order-money">
+                <p>
+                    状态：未付款
+                    <a href="#" style="margin-left: 20px; color: #c33829">
+                        <span>
+                            立即支付 <i class="icon-angle-right"></i>
+                        </span>
+                    </a>
+                </p>
+            </div>
         </div>
 
-        <!--支付方式-->
-        <h1>支付方式</h1>
-        <div style="border-bottom: 1px solid #ccc;"></div>
-        <div class="selected" style="width: 125px; height: 45px; line-height: 45px; text-align: center; margin: 15px;">
-           在线支付
+        <div class="pay-detail-two">
+            <div class="order-number">
+                订单：2014978239479
+            </div>
+            <div class="order-money">
+                <p>
+                    时间：2014.05.22  &nbsp; <span>15:24</span>
+                </p>
+                <p>
+                    金额：234234元
+                </p>
+                <p>
+                    货品：国馆中国道 *1
+                </p>
+                <p>
+                    配送：毛义明  /  18668199311  /  广东省，广州市，天河区，华明路 13号，华普广场东塔702 （510000）
+                </p>
+            </div>
+            <div class="order-money">
+                <p>
+                    状态：已付款（备货中）
+                </p>
+            </div>
         </div>
 
-
-        <!--购物车标题-->
-        <ul class="table-name">
-            <li style="width: 53%; text-align: left; margin-left: 2%">名称</li>
-            <li style="width: 10%">单价</li>
-            <li style="width: 19%">数量</li>
-            <li style="width: 10%">小计</li>
-        </ul>
-        <!--购物车标题-->
-
-        <ul style="padding: 0;margin:0; height: 110px;" class="product-display">
-            <li class="clearfix" style="width: 53%; text-align: left; margin-left: 2%">
-                <a href="#" class="pic">
-                    <img src="images/5_01.jpg">
-                </a>
-                <a class="name">国馆·中国道</a>
-            </li>
-            <li style="width: 10%; margin-top:25px;">2399元</li>
-            <li style="width: 19%; margin-top:25px;">1</li>
-            <li style="width: 10%; margin-top:25px; color: #ff9900">2399元</li>
-        </ul>
-        <ul style="padding: 0;margin:0; height: 110px;" class="product-display">
-            <li class="clearfix" style="width: 53%; text-align: left; margin-left: 2%">
-                <a href="#" class="pic">
-                    <img src="images/5_01.jpg">
-                </a>
-                <a class="name">国馆·中国道</a>
-            </li>
-            <li style="width: 10%; margin-top:25px;">2399元</li>
-            <li style="width: 19%; margin-top:25px;">1</li>
-            <li style="width: 10%; margin-top:25px; color: #ff9900">2399元</li>
-        </ul>
-
-        <div style="clear: both"></div>
-
-        <!--购物车底部-->
-        <ul class="table-content" style="margin-bottom: 30px;">
-            <li class="clear" style="width: 255px; text-align: right;float: right">
-                <div class="cart-total">
-                    <div class="cart-total-one">应付总额：</div>
-                    <div class="cart-total-two">20000元</div>
-                </div>
-                <div class="clear"></div>
-
-                <a href="pay.html" class="btn btn-red" style="float: right; width: 100px; margin-top:50px;">立即下单</a>
-                <a href="#" class="btn btn-valite" style=" margin-top:50px; float: right;height: 40px;line-height: 40px;margin-right: 10px;">返回购物车</a>
-            </li>
-
-        </ul>
-        <!--购物车底部-->
-
+        <div class="pay-detail-two">
+            <div class="order-number">
+                订单：2014978239479
+            </div>
+            <div class="order-money">
+                <p>
+                    时间：2014.05.22  &nbsp; <span>15:24</span>
+                </p>
+                <p>
+                    金额：234234元
+                </p>
+                <p>
+                    货品：国馆中国道 *1
+                </p>
+                <p>
+                    配送：毛义明  /  18668199311  /  广东省，广州市，天河区，华明路 13号，华普广场东塔702 （510000）
+                </p>
+            </div>
+            <div class="order-money">
+                <p>
+                    状态：已付款（已发货）
+                </p>
+            </div>
+        </div>
     </div>
 </div>
 <!--content end-->
-
 
 <!--footer-->
 <div class="site-footer mt0">
@@ -435,17 +367,6 @@
             'transitionIn'		: 'fade',
             'transitionOut'		: 'fade',
             'overlayOpacity'	: '0.7',
-            'overlayColor'		: '#fff',
-            'scrolling'		    : 'no',
-            'type'				: 'iframe'
-        });
-        $(".address-add").fancybox({
-            'width'				: 720,
-            'height'			: 600,
-            'autoScale'			: false,
-            'transitionIn'		: 'fade',
-            'transitionOut'		: 'fade',
-            'overlayOpacity'	: '0.3',
             'overlayColor'		: '#fff',
             'scrolling'		    : 'no',
             'type'				: 'iframe'
